add: 심화요구사항2 추가(.yaml 파일을 통해 File Repo 경로)